# IWTLA-Engine

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  todos.md
engine/: .gitignore  CMakeLists.txt
engine/include/assimp/: revision.h
engine/include/glad/: glad.h
engine/include/imgui/: imconfig.h
engine/include/imgui/backends/: imgui_impl_glfw.h
engine/include/stb/: image.h
engine/resources/models/cottage/: cottage_obj.mtl
engine/src/: entrypoint.cpp  entrypoint.h  ouroboros.h
engine/src/common/File/: File.cpp  File.h
engine/src/core/: assert.h  defines.h  logger.cpp  logger.h
engine/src/core/application/: application.cpp  application.h
engine/src/core/graphics/: material.h  model.h  texture.h
engine/src/core/graphics/renderer/: renderer.h  shader.cpp  shader.h
engine/src/core/graphics/renderer/impl/: opengl_renderer.cpp
engine/src/core/graphics/utils/: cube_model.cpp  cube_model.h  light_model.h
engine/src/core/resources/: resource_system.cpp  resource_system.h
engine/src/core/utils/uuid/: uuid.cpp  uuid.h
engine/src/core/window/: input.cpp  input.h  window.h
engine/src/core/window/impl/: glfw_window.cpp
engine/src/core/world/: camera.cpp  camera.h  components.h  scene.cpp  scene.h
engine/src/platform/: platform.h  platform_windows.cpp
include/imgui/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.h
lib/build_libs/flecs/: build.sh
old_lib/build_libs/flecs/: CMakeLists.txt
old_lib/build_libs/imgui/: build.sh
resources/: fragment.shader  lit_fragment.fs  vertex.shader
resources/defaults/: lit_fragment.fs  unlit_fragment.fs  unlit_vertex.vs
resources/defaults/shaders/: lit_frag.fs  unlit_frag.fs
sandbox/: CMakeLists.txt
sandbox/lib/: engined.lib
sandbox/resources/defaults/shaders/: lit_frag.fs  lit_vert.vs
sandbox/src/: application.cpp
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TempCubeMesh.cpp  TempCubeMesh.h  TempModel.cpp  TempModel.h  main.cpp
src/common/File/: File.cpp  File.h
src/core/: defines.h
src/core/application/: application.cpp  application.h
src/core/graphics/: material.h  mesh.cpp  mesh.h  model.h  texture.h
src/core/graphics/renderer/: renderer.h
src/core/graphics/renderer/impl/: opengl_renderer.cpp
src/core/graphics/utils/: CubeModel.cpp  CubeModel.h  cube_model.cpp  cube_model.h  light_model.cpp  light_model.h
src/core/renderer/: renderer.h  shader.cpp  shader.h
src/core/renderer/impl/: opengl_renderer.cpp
src/core/resources/: resource_manager.cpp  resource_manager.h  resource_system.cpp  resource_system.h
src/core/utils/uuid/: uuid.h
src/core/window/impl/: glfw_window.cpp
src/core/world/: components.h  light.h  scene.cpp  scene.h
src/core/world/entity/: entity.h
src/core/world/entity/components/: has_mesh.h  has_transform.cpp  has_transform.h  transform.h
src/utils/: Types.h
src/utils/File/: File.cpp  File.h
